--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,47 @@ body {
   height: 100%;
   margin: 0;
 }
+.nav-link {
+  transition: color 0.3s;
+}
+
+.nav-link:hover {
+  color: #0a66c2;
+}
+
+.img-header {
+  color: black;
+  font-size: large;
+  font-weight: 800;
+}
+
+.git-icon-portfolio {
+  color: #000;
+  background-color: white;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  z-index: 9999;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
+}
+.hover-img {
+  min-height: 300px;
+}
+
+.project-img {
+  width: 100%;
+  height: 100%;
+  min-height: 300px;
+  object-fit: fill;
+}
+
+.hover-img:hover .git-icon-portfolio {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
 
 #root {
   display: flex;
@@ -40,7 +81,7 @@ footer {
 }
 
 .nav-link {
-  color: #ffffff !important;
+  color: #ffffff;
 }
 
 /* .nav-link:hover {
